Upgraded project to java 9