@@ -1,18 +1,9 @@
-buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+plugins {
+    id "com.jfrog.bintray" version "1.7.3"
 }
-apply plugin: 'com.jfrog.bintray'
 
 group 'onethreeseven'
-version '0.0.3-SNAPSHOT'
+version '0.0.4-SNAPSHOT'
 
 allprojects {
     repositories {
@@ -24,8 +15,6 @@ allprojects {
     apply plugin: 'java'
 }
 
-sourceCompatibility = 1.8
-
 repositories {
     mavenLocal()
     mavenCentral()
@@ -35,13 +24,54 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile group: 'onethreeseven', name: 'geo', version: '0.0.3'
-    compile group: 'onethreeseven', name: 'common', version: '0.0.3-SNAPSHOT'
+    compile group: 'onethreeseven', name: 'geo', version: '0.0.4'
+    compile group: 'onethreeseven', name: 'common', version: '0.0.4'
+}
+
+ext.moduleName = 'onethreeseven.datastructures'
+
+compileJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+        ]
+        classpath = files()
+    }
+}
+
+compileTestJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'junit',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+        ]
+        classpath = files()
+    }
+}
+
+test {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-MODULE-PATH',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+        ]
+        classpath = files()
+    }
 }
 
 jar {
+    inputs.property("moduleName", moduleName)
     manifest {
-        attributes("Implementation-Title": project.name,
+        attributes(
+                'Automatic-Module-Name': moduleName,
+                "Implementation-Title": project.name,
                 "Implementation-Version": version,
                 'Built-By': System.getProperty('user.name'),
                 'Built-Date': new Date(),
@@ -56,6 +86,10 @@ task sourcesJar(type: Jar, dependsOn: classes) {
     from sourceSets.main.allSource
 }
 
+javadoc{
+    options.addStringOption('-module-path', classpath.asPath)
+}
+
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = "javadoc"
     from 'build/docs/javadoc'
@@ -63,8 +97,8 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 
 artifacts {
     archives jar
-    archives javadocJar
     archives sourcesJar
+    archives javadocJar
 }
 
 publishing {
@@ -79,7 +113,6 @@ publishing {
         }
     }
 }
-
 
 bintray {
     user = project.hasProperty('bintrayUser') ? project.bintrayUser : System.getenv('BINTRAY_USER')
